added separate script file with slider items' animation and 'show all' button in news section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 		</ul>
 		<div class="upper-menu__user-block">
 			<a href="#" class="upper-menu__regist">
-				<!--<img src="images/icons/icon-key.svg">-->
 				<svg width="24px" height="24px">
 					<use xlink:href="#icon-key"></use>
 				</svg>
@@ -89,8 +88,6 @@
 				<svg width="36px" height="33px" class="header__basket-hover">
 					<use xlink:href="#icon-basket-hover"></use>
 				</svg>
-				<!--<img src="images/icons/icon-basket.svg" class="header__basket-idle">
-				<img src="images/icons/icon-basket-hover.svg" class="header__basket-hover">-->
 				<span class="header__basket-num">1</span>
 			</a>
 			<div class="header__basket-info">
@@ -789,7 +786,6 @@
 					<div class="navigation__next"></div>
 				</div>
 			</section>
-
 			<section class="news">
 				<div class="content_header">
 					<svg width="18px" height="18px" class="content-header__icon">
@@ -798,6 +794,49 @@
 					<h2>НОВОСТИ</h2>
 				</div>
 				<div class="news__container">
+					<article class="news__slide news__slide--visible">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Летние цены уже ждут Вас!
+						</h3>
+						<p>
+							Мы снизили цены на многие категории товаров.
+							С сегодняшнего дня Вы сможете
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
+					<article class="news__slide news__slide--visible">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Появились долгожданные новинки!
+						</h3>
+						<p>
+							Мы снизили цены на многие категории товаров.
+							С сегодняшнего
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
+					<article class="news__slide">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Супер низкие цены!
+						</h3>
+						<p>
+							Система труб Tritix, уже на складе!
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
+
+					<article class="news__slide news__slide--visible">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Супер низкие цены!
+						</h3>
+						<p>
+							Система труб Tritix, уже на складе!
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
 					<article class="news__slide">
 						<div class="news__date">23.06.16</div>
 						<h3>
@@ -830,10 +869,31 @@
 						</p>
 						<a href="#">ПОДРОБНЕЕ</a>
 					</article>
+					<article class="news__slide">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Летние цены уже ждут Вас!
+						</h3>
+						<p>
+							Мы снизили цены на многие категории товаров.
+							С сегодняшнего дня Вы сможете
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
+					<article class="news__slide">
+						<div class="news__date">23.06.16</div>
+						<h3>
+							Появились долгожданные новинки!
+						</h3>
+						<p>
+							Мы снизили цены на многие категории товаров.
+							С сегодняшнего
+						</p>
+						<a href="#">ПОДРОБНЕЕ</a>
+					</article>
 				</div>
-				<a href="#" class="btn btn--news">ПОКАЗАТЬ ВСЕ</a>
+				<a class="btn btn--news">ПОКАЗАТЬ ВСЕ</a>
 			</section>
-
 			<section class="slider-block slider-block--newest-products">
 				<div class="content_header">
 					<svg width="20px" height="19px" class="content-header__icon">
@@ -1104,7 +1164,6 @@
 					<div class="navigation__next"></div>
 				</div>
 			</section>
-
 			<section class="slider-block slider-block--high-demand">
 				<div class="content_header">
 					<svg width="20px" height="18px" class="content-header__icon">
@@ -1442,33 +1501,50 @@
 					</svg>
 				</a>
 			</section>
-
 			<section class="trade-equipment">
 				<h2>Торговое оборудование</h2>
 				<p>
-					Каталог торгового оборудования. Цены. Опт, розница. Доставка. Самовывоз. Скидки. Онлайн-заказ торгового оборудования для магазинов.
+					Каталог торгового оборудования.
+					Цены. Опт, розница. Доставка.
+					Самовывоз. Скидки.
+					Онлайн-заказ торгового оборудования для магазинов.
 				</p>
 				<p>
-					Торговое оборудование — тот же продавец-консультант. Оно так же окружает посетителя магазина вниманием и заботой, показывает товар,
-					подчеркивает его положительные черты и характеристики, предлагает возможные варианты, советует обратить внимание на ту или иную модель.
-					Поэтому подбор торгового оборудования сродни приему на работу нового сотрудника, только в этом случае ответственность за конечный результат —
-					а именно объемы продаж и прибыль торговой компании — целиком и полностью ложится на плечи руководителя.
+					Торговое оборудование — тот же продавец-консультант.
+					Оно так же окружает посетителя магазина вниманием и заботой, показывает товар,
+					подчеркивает его положительные черты и характеристики, предлагает возможные варианты,
+					советует обратить внимание на ту или иную модель.
+					Поэтому подбор торгового оборудования сродни приему на работу нового сотрудника,
+					только в этом случае ответственность за конечный результат —
+					а именно объемы продаж и прибыль торговой компании — целиком и полностью ложится
+					на плечи руководителя.
 				</p>
 				<p>
-					Умение быстро и правильно подобрать торговое оборудование для магазинов включает в себя несколько основных пунктов. Первым делом, необходимо
-					достаточно хорошо разбираться в ассортименте имеющихся на рынке предложений. Бурное развитие торговли способствовало широкому распространению
-					самых разнообразных видов и типов торгового оборудования — сегодня перед предпринимателем, решившим открыть свой магазин, появляется просто
-					огромный спектр возможностей по его обустройству и интерьерному оформлению. Подвесные тросовые системы и модульные сборно-разборные конструкции
-					из труб и крепежей, экономпанели со всевозможными навесными аксессуарами и комплектующими, решетки и многочисленные элементы к ним, вешала,
-					стойки, стеллажи, вешалки, зеркала, манекены, торсы, демонстрационные формы, ценники, перфорированные системы, накопители, примерочные, прилавки,
-					витрины, островные системы — очень даже внушительный набор. Само собой, все это, а также многое другое торговое оборудование можно найти и выбрать
+					Умение быстро и правильно подобрать торговое оборудование для магазинов
+					включает в себя несколько основных пунктов. Первым делом, необходимо
+					достаточно хорошо разбираться в ассортименте имеющихся на рынке предложений.
+					Бурное развитие торговли способствовало широкому распространению
+					самых разнообразных видов и типов торгового оборудования — сегодня перед предпринимателем,
+					решившим открыть свой магазин, появляется просто
+					огромный спектр возможностей по его обустройству и интерьерному оформлению.
+					Подвесные тросовые системы и модульные сборно-разборные конструкции
+					из труб и крепежей, экономпанели со всевозможными навесными аксессуарами и комплектующими,
+					решетки и многочисленные элементы к ним, вешала,
+					стойки, стеллажи, вешалки, зеркала, манекены, торсы, демонстрационные формы, ценники,
+					перфорированные системы, накопители, примерочные, прилавки,
+					витрины, островные системы — очень даже внушительный набор. Само собой, все это, а также
+					многое другое торговое оборудование можно найти и выбрать
 					в каталоге нашей компании.
 				</p>
 				<p>
-					Однако, купить торговое оборудование — это только полдела. Не менее — а может быть и намного более — важным этапом является разработка
-					и создание дизайн-проекта будущего торгово-выставочного помещения. И если в своей квартире все вольны делать перестановки мебели по собственному
-					разумению, в полном соответствии с личными предпочтениями, взглядами и вкусами, то интерьер магазина должен быть «понятен» и удобен большинству
-					посетителей и, соответственно, стимулировать вошедшего перейти в разряд покупателей, обязательно совершить покупку. В свою очередь, организация
+					Однако, купить торговое оборудование — это только полдела. Не менее — а может быть
+					и намного более — важным этапом является разработка
+					и создание дизайн-проекта будущего торгово-выставочного помещения. И если в своей
+					квартире все вольны делать перестановки мебели по собственному
+					разумению, в полном соответствии с личными предпочтениями, взглядами и вкусами, то
+					интерьер магазина должен быть «понятен» и удобен большинству
+					посетителей и, соответственно, стимулировать вошедшего перейти в разряд покупателей,
+					обязательно совершить покупку. В свою очередь, организация
 					торговых зон обуславливает выбор оборудования для магазина.
 				</p>
 			</section>
@@ -1476,7 +1552,7 @@
 		</div>
 	</div>
 </main>
-<footer class="footer"><!--460-->
+<footer class="footer">
 	<div class="container container--footer">
 		<section class="footer__description">
 			<img class="footer__logo" src="images/logotip2.png">
@@ -1484,7 +1560,7 @@
 			<img class="footer__logo-mm-media" src="images/mm-media-logo.png">
 			<a href="#">Создание и продвижение сайтов</a>
 		</section>
-		<section class="footer__site-navigation"><!--270-->
+		<section class="footer__site-navigation">
 			<h2>НАВИГАЦИЯ ПО САЙТУ</h2>
 			<ul>
 				<li>
@@ -1507,7 +1583,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="footer__products-navigation"><!--330-->
+		<section class="footer__products-navigation">
 			<h2>НАВИГАЦИЯ ПО ТОВАРАМ</h2>
 			<ul>
 				<li>
@@ -1543,5 +1619,6 @@
 		</div>
 	</div>
 </footer>
+<script src="js/script.js"></script>
 </body>
 </html>
